--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -66,7 +66,7 @@
                 </form>
                 <form ng-show="$root.currentUser && loginform.status === 'down'" ng-cloak>
                     <div class="form-button">
-                        <a href="/profile/{{$root.currentUser.username}}">Profil</a>
+                        <a href="/profile/{{$root.currentUser.username}}" ng-click="resetState()">Profil</a>
                         <input type="button" value="Ausloggen" ng-click="logout()" />
                     </div>
                 </form>
