sidebar: link header to root

--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a href="#">
+    <h1><a href="/">
         <img class="large" src="images/shownotes-logo.svg" alt="shownot.es" />
         <img class="small" src="images/shownotes-signet.svg" alt="shownot.es" title="shownot.es" />
     </a></h1>
