--- a/app/components/document/render/document-render.html
+++ b/app/components/document/render/document-render.html
@@ -2,7 +2,7 @@
     <div ng-show="showFormats" ng-cloak>
         <div class="button-group">
             <button ng-repeat="f in formats"
-                    ng-disabled="format == f"
+                    ng-disabled="formatName == f.name"
                     ng-click="enableFormat(f.name)">
                 {{f.caption}}
             </button>
