sighting: edit podcasters and shownoters

--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -34,7 +34,7 @@
 			<div class="shownotes-meta">
 
 				<p><strong>Podcaster</strong>:</p>
-				<name-list names="doc.meta.podcasters" name-attr="name" add-name="addPodcaster" del-name="removePodcaster"></name-list>
+				<name-list names="doc.meta.podcasters" name-attr="name" add-name="addPodcaster" del-name="delPodcaster"></name-list>
 
 			</div>
 
