--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -31,12 +31,12 @@
 
 	<div class="box-wrapper">
 		<h3>Podcaster</h3>
-		<name-list names="publication.podcasters" name-attr="name" add-name="addPodcaster"></name-list>
+		<name-list names="publication.podcasters" name-attr="name" add-name="addPodcaster" del-name="delPodcaster"></name-list>
 	</div>
 
 	<div class="box-wrapper">
 		<h3>Helfer</h3>
-		<name-list names="publication.shownoters" name-attr="name" add-name="addShownoter"></name-list>
+		<name-list names="publication.shownoters" name-attr="name" add-name="addShownoter" del-name="delShownoter"></name-list>
 	</div>
 
 </div>
