--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -96,5 +96,5 @@
 			<input type="checkbox" id="preliminary" ng-model="publication.preliminary" value="checkrules" />
 			<label for="preliminary">Als <em>vorläufig</em> markieren</label>
 		</div>
-	<input type="submit" value="Version sichten" />
+	<input type="submit" value="Version sichten" ng-click="publish()" />
 </form>
