--- a/app/components/user/profile/profile.html
+++ b/app/components/user/profile/profile.html
@@ -58,6 +58,8 @@
 <div class="box-wrapper">
 	<h3>Passwort</h3>
 
+	<p>Für Passwörter gilt: Je länger, desto sicherer.</p>
+
 	<form class="form-wrapper">
 		<input type="password" value="" placeholder="Aktuelles Passwort bestätigen" ng-model="pwchange.password" />
 		<input type="password" value="" placeholder="Neues Passwort" ng-model="pwchange.newpassword" />
