--- a/app/components/admin/sighting/sighting.html
+++ b/app/components/admin/sighting/sighting.html
@@ -2,6 +2,10 @@
 
 <p>Diese Liste enthält insgesamt 5 Dokumente, die gesichtet und/oder veröffentlicht werden sollen.</p>
 
+<div class="box-wrapper">
+	<input type="text" placeholder="Dokumente durchsuchen" />
+</div>
+
 <table>
 	<tr>
 		<th>Podcast</th>
