--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -31,14 +31,14 @@
 	</tr>
 </table>
 
-<p>Die meister dieser Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>. Danke eazy!</p>
+<p>Die meisten dieser Termine stammen aus dem <a href="http://hoersuppe.de/kalender/">Hörsuppe-Kalender</a>.</p>
 
 <footer>
 
 	<ul>
 		<li><a href="/donate">Spenden</a></li>
 		<li><a href="/rules">Regeln</a></li>
-		<li><a href="#">Datenschutz</a></li>
+		<li><a href="/privacy">Datenschutz</a></li>
 		<li><a href="/imprint">Impressum</a></li>
 	</ul>
 
