readonly-url: accept pub-num

--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -10,4 +10,4 @@
 
 </div>
 
-<document-render document="doc" show-formats="true"></document-render>
+<document-render document="doc" show-formats="true" publication="pub"></document-render>
