fix urls for trailing slashes slash

--- a/app/components/publicprofile/publicprofile.html
+++ b/app/components/publicprofile/publicprofile.html
@@ -14,7 +14,7 @@
 	<h3><span>war {{last_login}} online</span></h3>
 
 	<p ng-show="user.username == currentUser.username">
-		Hallo <em>{{user.username}}</em>! Möchtest du dein <a href="/user/profile">Profil bearbeiten</a>?
+		Hallo <em>{{user.username}}</em>! Möchtest du dein <a ui-sref="user-profile">Profil bearbeiten</a>?
 	</p>
 
 	<div class="box-wrapper">
