fix public profile link in private profile

--- a/app/components/user/profile/profile.html
+++ b/app/components/user/profile/profile.html
@@ -1,7 +1,7 @@
 <h2>Profil bearbeiten</h2>
 <h3>Fühl dich wie zu Hause.</h3>
 
-<p>Hallo <em>{{user.username}}</em>! Hier kannst du dein <a ui-sref="user-profile({ username: $root.currentUser.username })">persönliches Profil</a> bearbeiten.</p>
+<p>Hallo <em>{{user.username}}</em>! Hier kannst du dein <a ui-sref="publicprofile({ username: $root.currentUser.username })">persönliches Profil</a> bearbeiten.</p>
 
 
 <div class="box-wrapper">
