readonly view format episode date

--- a/app/components/document/readonly/document-readonly.html
+++ b/app/components/document/readonly/document-readonly.html
@@ -4,7 +4,7 @@
 
 	<div>
 		<h2>{{episode.podcast.title}} {{episode.number}}</h2>
-		<h3>{{episode.date}}</h3>
+		<h3>{{episode.date | date:'medium'}}</h3>
 		<a ui-sref="document-edit({ name: doc.name })">Bearbeiten</a>
 	</div>
 
