--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -48,7 +48,12 @@
 
 	<div class="chat">
 
-		<p ng-repeat="msg in chatmessages" style="background-color: #{{msg.issuer.color}}"><time>{{msg.date | date: 'shortTime'}}</time><strong>{{msg.issuer.name}}:</strong> {{msg.message}}</p>
+		<div class="chatmsgs">
+			<p ng-repeat="msg in chatmessages" style="background-color: #{{msg.issuer.color}}">
+				<time>{{msg.date | date: 'shortTime'}}</time>
+				<strong>{{msg.issuer.name}}:</strong> {{msg.message}}
+			</p>
+		</div>
 
 		<form class="chat-input">
 			<input type="text" value="" placeholder="Nachricht" ng-model="chatmsg.message" />
