--- a/app/components/document/edit/document-edit.html
+++ b/app/components/document/edit/document-edit.html
@@ -24,7 +24,8 @@
 
 					<form class="sighting">
 						<input type="submit" value="Version sichten" ng-show="canPublish" ng-click="doSighting()" />
-						<input type="submit" value="Sichtung beantragen" ng-show="!canPublish" ng-click="requestSighting()" />
+						<input type="submit" value="Sichtung beantragen" ng-show="!canPublish && !hasPublicationRequests()" ng-click="requestSighting()" />
+						<input type="submit" value="Sichtung beantragt" ng-show="!canPublish && hasPublicationRequests()" disabled />
 					</form>
 
 				</div>
