--- a/app/components/admin/sighting/sighting.html
+++ b/app/components/admin/sighting/sighting.html
@@ -1,6 +1,6 @@
 <h2>Sendungsnotizen sichten</h2>
 
-<p>Diese Liste enthält insgesamt 5 Dokumente, die gesichtet und/oder veröffentlicht werden sollen.</p>
+<p>Diese Liste enthält insgesamt {{count}} Dokumente, die gesichtet und/oder veröffentlicht werden sollen.</p>
 
 <div class="box-wrapper">
 	<input type="text" placeholder="Dokumente durchsuchen" />
@@ -12,29 +12,12 @@
 		<th>Datum</th>
 		<th>Status</th>
 	</tr>
-	<tr>
-		<td><a href="#">CR203 Freifunk statt Angst</a></td>
-		<td>31.07.2014</td>
-		<td><span class="statuslabel">Unveröffentlicht</span></td>
-	</tr>
-	<tr>
-		<td><a href="#">CR202</a></td>
-		<td>26.06.2014</td>
-		<td><span class="statuslabel">Sichtung beantragt</span></td>
-	</tr>
-	<tr>
-		<td><a href="#">CR201 &hellip;und keiner hat's gesehen</a></td>
-		<td>29.05.2014</td>
-		<td><span class="statuslabel">Unveröffentlicht</span></td>
-	</tr>
-	<tr>
-		<td><a href="#">CR200</a></td>
-		<td>24.04.2014</td>
-		<td><span class="statuslabel">Unveröffentlicht</span></td>
-	</tr>
-	<tr>
-		<td><a href="#">CR199</a></td>
-		<td>27.03.2014</td>
-		<td><span class="statuslabel">Sichtung beantragt</span></td>
+	<tr ng-repeat="doc in todos">
+		<td><a ui-sref="document-sighting({ name: doc.name })">{{doc.episode.podcast.title}}</a></td>
+		<td>{{doc.episode.date | date:'medium'}}</td>
+		<td>
+			<span class="statuslabel" ng-show="doc.episode.publications.length == 0">Unveröffentlicht</span>
+			<span class="statuslabel" ng-show="doc.episode.publicationrequests.length > 0">Sichtung beantragt</span>
+		</td>
 	</tr>
 </table>
