livelist: fix create of episode which already have a number

--- a/app/components/livelist/livelist.html
+++ b/app/components/livelist/livelist.html
@@ -22,7 +22,7 @@
 		<td>
 			<div ng-show="setNumber == ep">
 				Nummer:
-				<input type="text" id="addNumber_{{$index}}" ng-model="ep.number" style="display: inline-block; width: 150px">
+				<input type="text" id="addNumber_{{$index}}" ng-model="number" style="display: inline-block; width: 150px">
 				<input type="button" value="Erstellen" ng-click="create($index)" style="display: inline-block; width: 75px">
 				<input type="button" value="Weiß nicht" ng-click="create($index, true)" style="display: inline-block; width: 100px">
 			</div>
