--- a/app/components/admin/sighting/sighting.html
+++ b/app/components/admin/sighting/sighting.html
@@ -3,7 +3,7 @@
 <p>Diese Liste enthält insgesamt {{count}} Dokumente, die gesichtet und/oder veröffentlicht werden sollen.</p>
 
 <div class="box-wrapper">
-	<input type="text" placeholder="Dokumente durchsuchen" />
+	<input type="text" placeholder="Dokumente durchsuchen" ng-model="search" />
 </div>
 
 <table>
