--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -28,7 +28,7 @@
 
 	<div class="box-wrapper">
 		<h3>Helfer</h3>
-		<name-list names="publication.shownoters" name-attr="name" add-name="addShownoter" del-name="delShownoter"></name-list>
+		<name-list names="doc.meta.shownoters" name-attr="name" add-name="addShownoter" del-name="delShownoter"></name-list>
 	</div>
 
 </div>
