--- a/app/components/static/faq.html
+++ b/app/components/static/faq.html
@@ -5,11 +5,11 @@
 	<h3>Allgemeine Fragen</h3>
 
 	<ul>
-		<li><a href="/faq#shownotes">Was ist shownot.es?</a></li>
-		<li><a href="/faq#sendungsnotizen">Was sind Sendungsnotizen?</a></li>
-		<li><a href="/faq#osf">Was ist OSF?</a></li>
-		<li><a href="/faq#englisch">Gibt es diese Plattform auch auf Englisch?</a></li>
-		<li><a href="/faq#entwickeln">Kann ich dabei helfen, shownot.es weiterzuentwickeln?</a></li>
+		<li><a href="/faq/#shownotes">Was ist shownot.es?</a></li>
+		<li><a href="/faq/#sendungsnotizen">Was sind Sendungsnotizen?</a></li>
+		<li><a href="/faq/#osf">Was ist OSF?</a></li>
+		<li><a href="/faq/#englisch">Gibt es diese Plattform auch auf Englisch?</a></li>
+		<li><a href="/faq/#entwickeln">Kann ich dabei helfen, shownot.es weiterzuentwickeln?</a></li>
 	</ul>
 
 	<hr />
@@ -17,8 +17,8 @@
 	<h3>Fragen von Shownotern</h3>
 
 	<ul>
-		<li><a href="/faq#helfen">Wie kann ich mich beteiligen?</a></li>
-		<li><a href="/faq#bezahlung">Wieso bekomme ich als Helfer kein Geld?</a></li>
+		<li><a href="/faq/#helfen">Wie kann ich mich beteiligen?</a></li>
+		<li><a href="/faq/#bezahlung">Wieso bekomme ich als Helfer kein Geld?</a></li>
 	</ul>
 
 	<hr />
@@ -26,10 +26,10 @@
 	<h3>Fragen von Podcastern</h3>
 
 	<ul>
-		<li><a href="/faq#">Welchen Vorteil haben Sendungsnotizen?</a></li>
-		<li><a href="/faq#podcast">Wie kommt mein Podcast auf shownot.es?</a></li>
-		<li><a href="/faq#">Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?</a></li>
-		<li><a href="/faq#">Bin ich dazu verpflichtet, die Helfer zu nennen oder zu belohnen?</a></li>
+		<li><a href="/faq/#">Welchen Vorteil haben Sendungsnotizen?</a></li>
+		<li><a href="/faq/#podcast">Wie kommt mein Podcast auf shownot.es?</a></li>
+		<li><a href="/faq/#">Wie überzeuge ich meine Hörer, Sendungsnotizen zu schreiben?</a></li>
+		<li><a href="/faq/#">Bin ich dazu verpflichtet, die Helfer zu nennen oder zu belohnen?</a></li>
 	</ul>
 
 	<p>Deine Frage ist nicht dabei? Wende dich an die <a href="/community">Community</a> oder schick uns eine <a href="mailto:team@shownot.es">E-Mail</a>!</p>
