community: clarify ADN & Twitter

--- a/app/components/static/community.html
+++ b/app/components/static/community.html
@@ -14,7 +14,7 @@
 		<span class="icon-twitter"></span>
 		<div>
 			<h3>Twitter &amp; App.net</h3>
-			<p>Wenn es mal schnell und unkompliziert gehen soll, kannst du uns unter <a href="https://twitter.com/DieShownotes">@DieShownotes</a> und <a href="https://alpha.app.net/shownotes">@shownotes</a> folgen oder den <a href="https://twitter.com/search?f=realtime&q=%23shownotes">entsprechenden Hashtag</a> verwenden.</p>
+			<p>Wenn es mal schnell und unkompliziert gehen soll, kannst du uns unter <a href="https://twitter.com/DieShownotes">@DieShownotes</a> (Twitter) und <a href="https://alpha.app.net/shownotes">@shownotes</a> (ADN) folgen oder den <a href="https://twitter.com/search?f=realtime&q=%23shownotes">entsprechenden Hashtag</a> verwenden.</p>
 		</div>
 	</li>
 	<li>
