--- a/app/components/archive/podcast/podcast.html
+++ b/app/components/archive/podcast/podcast.html
@@ -1,6 +1,6 @@
 <div class="cover-header">
 
-	<img src="{{podcast.cover}}" alt="cover" class="cover" />
+	<media-image alt="cover" class="cover" path="podcast.cover.file"></media-image>
 
 	<div>
 		<h2>{{podcast.title}}</h2>
