--- a/app/components/archive/archive/box/podcastarchivebox.html
+++ b/app/components/archive/archive/box/podcastarchivebox.html
@@ -1,4 +1,4 @@
 <a ui-sref="archive-podcast({ podcast: pod.slug })" title="{{pod.title}}">
-    <img src="{{pod.cover}}" alt="{{pod.title}}" />
+    <media-image alt="cover" path="pod.cover.file"></media-image>
     <h3>{{pod.title}}</h3>
 </a>
