sighting: redirect to episode page after sucessfull sighting

--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -97,4 +97,5 @@
 			<label for="preliminary">Als <em>vorläufig</em> markieren</label>
 		</div>
 	<input type="submit" value="Version sichten" ng-click="publish()" />
+	<span ng-show="pubFailed">Nope. :(</span>
 </form>
