sighting: don't allow if there is no episode number

--- a/app/components/document/sighting/document-sighting.html
+++ b/app/components/document/sighting/document-sighting.html
@@ -96,6 +96,6 @@
 			<input type="checkbox" id="preliminary" ng-model="publication.preliminary" value="checkrules" />
 			<label for="preliminary">Als <em>vorläufig</em> markieren</label>
 		</div>
-	<input type="submit" value="Version sichten" ng-click="publish()" />
+	<input type="submit" value="Version sichten" ng-click="publish()" ng-disabled="!episode.number" />
 	<span ng-show="pubFailed">Nope. :(</span>
 </form>
