--- a/app/components/user/profile/profile.html
+++ b/app/components/user/profile/profile.html
@@ -10,7 +10,7 @@
 	<p>Diese Angaben sind öffentlich einsehbar.</p>
 
 	<form class="form-wrapper">
-		<textarea placeholder="Erzähl etwas über dich. Was ist dein Lieblings-Podcast?" ng-model="user.bio"></textarea>
+		<textarea placeholder="Erzähl etwas über dich. Was ist dein Lieblingspodcast?" ng-model="user.bio"></textarea>
 
 		<p>Deine Farbe im Editor:
 			<spectrum-colorpicker ng-model="user.color" format="hex"></spectrum-colorpicker>
