pwreset: fix username display

--- a/app/components/user/pwreset/pwreset.html
+++ b/app/components/user/pwreset/pwreset.html
@@ -1,7 +1,7 @@
 <h2>Passwort ändern</h2>
 <h3>Und das nächste Mal einfach merken</h3>
 
-<p>Hallo {{user.username}}! Du kannst nun dein Passwort ändern.</p>
+<p>Hallo {{username}}! Du kannst nun dein Passwort ändern.</p>
 
 <div class="box-wrapper">
 	<h3>Passwort ändern</h3>
