--- a/app/components/user/pwreset/pwreset.html
+++ b/app/components/user/pwreset/pwreset.html
@@ -6,7 +6,8 @@
 <div class="box-wrapper">
 	<h3>Passwort ändern</h3>
 
-	<form class="profile-edit">
+	<form class="form-wrapper">
+		<p>Denk daran: Je länger das Passwort, umso sicherer ist es.</p>
 		<input type="password" value="" placeholder="Neues Passwort" ng-model="pwreset.password" />
 		<input type="password" value="" placeholder="Neues Passwort bestätigen" ng-model="pwreset.password2" equals="{{upgrade.password}}" />
 		<input type="submit" value="Passwort speichern" ng-click="sendPwReset()" />
