--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -938,11 +938,12 @@ nav li > input[type="checkbox"] {
 .namelist {
   span.delete {
 	color: #40a662;
-	font-weight: bold;
 	text-decoration: none;
 	cursor: pointer;
   }
-
+  span.delete:hover {
+	color: #007369;
+  }
   > span:not(.empty):not(:last-child)::after {
 	content: ',\20'
   }
@@ -1034,13 +1035,84 @@ nav li > input[type="checkbox"] {
 .chat {
 	height: 100vh;
 	width: 20%;
+}
+.userlist {
+	background-color: #fefefe;
+	width: 100%;
 	position: fixed;
+	box-shadow: 0.5em 0.1em 0.25em 0.1em rgba(0, 0, 0, 0.3);
+	z-index: 2;
+}
+.userlist h3 {
+	padding: 1em;
+	margin: 0;
+	cursor: pointer;
+}
+.userlist h3:hover {
+	color: #111;
+}
+.userlist ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.userlist li {
+	display: block;
+	padding: .5em;
+}
+.userlist li:not(:last-child) {
+	border-bottom: 3px solid #eee;
+}
+.userlist li:hover {
+	background-color: #eee;
+}
+.userlist .statuslabel {
+	color: #111;
+	font-size: 1em;
+	font-weight: bold;
+}
+.userlist .statuslabel.inactive {
+	opacity: .5;
+}
+.userlist .ban {
+	color: #40a662;
+	vertical-align: middle;
+	cursor: pointer;
+}
+.userlist .ban:hover {
+	color: #007369;
 }
 .chatmsgs {
-	overflow-y: scroll;
+	height: 100vh;
+	padding-bottom: 4.5em;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: row;
+	-ms-flex-direction: row;
+	flex-direction: row;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-box-pack: end;
+	-moz-box-pack: end;
+	-webkit-justify-content: flex-end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+	-webkit-align-content: flex-end;
+	-ms-flex-line-pack: end;
+	align-content: flex-end;
+	-webkit-box-align: end;
+	-moz-box-align: end;
+	-webkit-align-items: flex-end;
+	-ms-flex-align: end;
+	align-items: flex-end;
 }
 .chat p {
 	font-size: .8em;
+	width: 100%;
 	padding: .25em;
 	margin: 0 !important;
 }
